--- a/nr-add-examples/ig/mod_erreurs.html
+++ b/nr-add-examples/ig/mod_erreurs.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>Doc Modeler - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
+    <title>Les erreurs courantes - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -42,8 +42,8 @@
 	  <script src="assets/js/prism.js"></script>
     <script type="text/javascript" src="assets/js/mermaid.js"></script>
     <script type="text/javascript" src="assets/js/mermaid-init.js"></script>
-    <style type="text/css">h2{--heading-prefix:"3"}
-    h3,h4,h5,h6{--heading-prefix:"3.0"}</style>
+    <style type="text/css">h2{--heading-prefix:"3.2"}
+    h3,h4,h5,h6{--heading-prefix:"3.2"}</style>
     <div id="segment-header" class="segment">  <!-- segment-header -->
       <div class="container">  <!-- container -->
         <!-- Placeholder for child template header declarations -->
@@ -105,16 +105,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="dev_nouvel_ig.html">Quick start IG</a>
+        <a href="mod_nouvel_ig.html">Quick start IG</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_modeler.html">Bonnes pratiques</a>
+        <a href="mod_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="erreurs.html">Les erreurs courantes</a>
+        <a href="mod_erreurs.html">Les erreurs courantes</a>
       </li>
       <li>
-        <a href="github.html">Usage de GitHub</a>
+        <a href="mod_github.html">Usage de GitHub</a>
       </li>
     </ul>
   </li>
@@ -124,16 +124,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="demarrer_sur_fhir.html">Quick start FHIR</a>
+        <a href="impl_demarrer_sur_fhir.html">Quick start FHIR</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_implementer.html">Bonnes pratiques</a>
+        <a href="impl_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="instance_hapi.html">Déployer une instance HAPI</a>
+        <a href="impl_instance_hapi.html">Déployer une instance HAPI</a>
       </li>
       <li>
-        <a href="valider_res.html">Valider une ressource contre un profil</a>
+        <a href="impl_valider_res.html">Valider une ressource contre un profil</a>
       </li>
     </ul>
   </li>
@@ -174,15 +174,15 @@
     <div id="segment-breadcrumb" class="segment">  <!-- segment-breadcrumb -->
       <div class="container">  <!-- container -->
         <ul class="breadcrumb">
-          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><b>Doc Modeler</b></li>
+          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><a href='mod_nouvel_ig.html'><b>Quick start IG</b></a></li><li><b>Les erreurs courantes</b></li>
 
           <span style="float:right;">
 
-            <a href="doc_ps.html">&lt;prev</a> | 
+            <a href="mod_bonnes_pratiques.html">&lt;prev</a> | 
 
             <a href="#bottom">bottom</a>
 
-          | <a href="dev_nouvel_ig.html">next&gt;</a>
+          | <a href="mod_github.html">next&gt;</a>
 
           </span>
 
@@ -205,7 +205,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </style>
 <div class="col-12">
   <!--ReleaseHeader--><p id="publish-box">Documentation des guides d'implémentation de l'ANS - version de développement local (v0.1.9) construite par les outils de publication FHIR (HL7® FHIR® Standard). Voir le <a href='https://interop.esante.gouv.fr/ig/documentation/history.html'>répertoire des versions publiées</a></p><!--EndReleaseHeader-->
-  <h2>Doc Modeler</h2>
+  <h2>Les erreurs courantes</h2>
   
 
 
@@ -220,9 +220,36 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 
     <p><!-- white space is critical inside of capture --></p>
-<div>
-<!-- do not remove - needed to prevent Jekyll from adding a p tag to any non block level element in the markdown.-->
+<div class="markdown-toc">
+<ul id="markdown-toc">
+  <li><a href="#erreur-nullpointerexception" id="markdown-toc-erreur-nullpointerexception">Erreur NullPointerException</a></li>
+  <li><a href="#erreur-missing-snapshot" id="markdown-toc-erreur-missing-snapshot">Erreur Missing Snapshot</a></li>
+</ul>
+
 </div>
+<h3 id="erreur-nullpointerexception">Erreur NullPointerException</h3>
+<ul>
+  <li>java.lang.NullPointerException: Cannot invoke “org.hl7.fhir.r5.model.DataType.isPrimitive()” because “type” is null
+L’erreur vient du fait qu’il y a des fichiers qui ne finissent pas par .md ou par .xml dans pagecontent</li>
+</ul>
+
+<h3 id="erreur-missing-snapshot">Erreur Missing Snapshot</h3>
+<p>FSH nécessite d’avoir des packages avec snapshot et differential. Les packages historiques (&lt;2024) n’avaient pas de snapshot, engendrant des erreurs de générations lorsque ceux-ci sont mis en dépendaces. Pour régler ce problème, il est possible de générer les snapshots dans le FHIR CACHE :</p>
+
+<ul>
+  <li>Installer dotnet sdk : https://dotnet.microsoft.com/en-us/download</li>
+  <li>Lancer la commande <code class="language-plaintext highlighter-rouge">dotnet tool install --global Firely.Terminal --version 3.0.0</code></li>
+</ul>
+
+<p>Exemples d’usage :</p>
+
+<ul>
+  <li><code class="language-plaintext highlighter-rouge">fhir bake --package hl7.fhir.fr.core</code></li>
+  <li><code class="language-plaintext highlighter-rouge">fhir bake --package ans.annuaire.fhir.r4</code></li>
+  <li><code class="language-plaintext highlighter-rouge">fhir bake --package ans.cisis.fhir.r4</code></li>
+</ul>
+
+<p>Source : https://fshschool.org/docs/sushi/running/#structure-definition-is-missing-snapshot-error</p>
 
 
 
@@ -247,7 +274,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
             <tr>
               <td style="text-align:left">&#xA0;
 
-                <a href="doc_ps.html">&lt;prev</a>
+                <a href="mod_bonnes_pratiques.html">&lt;prev</a>
 
               </td>
               <td style="text-align:center">
@@ -255,7 +282,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
               </td>
               <td style="text-align:right">&#xA0;
 
-                <a href="dev_nouvel_ig.html">next&gt;</a>
+                <a href="mod_github.html">next&gt;</a>
 
               </td>
             </tr>
@@ -265,7 +292,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:27+0000">2026-01-05</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:54+0000">2026-01-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
