--- a/nr-add-examples/ig/impl_demarrer_sur_fhir.html
+++ b/nr-add-examples/ig/impl_demarrer_sur_fhir.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>Déployer une instance HAPI - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
+    <title>Quick start FHIR - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -42,8 +42,8 @@
 	  <script src="assets/js/prism.js"></script>
     <script type="text/javascript" src="assets/js/mermaid.js"></script>
     <script type="text/javascript" src="assets/js/mermaid-init.js"></script>
-    <style type="text/css">h2{--heading-prefix:"4.3"}
-    h3,h4,h5,h6{--heading-prefix:"4.3"}</style>
+    <style type="text/css">h2{--heading-prefix:"4"}
+    h3,h4,h5,h6{--heading-prefix:"4.0"}</style>
     <div id="segment-header" class="segment">  <!-- segment-header -->
       <div class="container">  <!-- container -->
         <!-- Placeholder for child template header declarations -->
@@ -105,16 +105,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="dev_nouvel_ig.html">Quick start IG</a>
+        <a href="mod_nouvel_ig.html">Quick start IG</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_modeler.html">Bonnes pratiques</a>
+        <a href="mod_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="erreurs.html">Les erreurs courantes</a>
+        <a href="mod_erreurs.html">Les erreurs courantes</a>
       </li>
       <li>
-        <a href="github.html">Usage de GitHub</a>
+        <a href="mod_github.html">Usage de GitHub</a>
       </li>
     </ul>
   </li>
@@ -124,16 +124,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="demarrer_sur_fhir.html">Quick start FHIR</a>
+        <a href="impl_demarrer_sur_fhir.html">Quick start FHIR</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_implementer.html">Bonnes pratiques</a>
+        <a href="impl_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="instance_hapi.html">Déployer une instance HAPI</a>
+        <a href="impl_instance_hapi.html">Déployer une instance HAPI</a>
       </li>
       <li>
-        <a href="valider_res.html">Valider une ressource contre un profil</a>
+        <a href="impl_valider_res.html">Valider une ressource contre un profil</a>
       </li>
     </ul>
   </li>
@@ -174,15 +174,15 @@
     <div id="segment-breadcrumb" class="segment">  <!-- segment-breadcrumb -->
       <div class="container">  <!-- container -->
         <ul class="breadcrumb">
-          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><a href='doc_implementer.html'><b>Doc Implementer</b></a></li><li><b>Déployer une instance HAPI</b></li>
+          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><b>Quick start FHIR</b></li>
 
           <span style="float:right;">
 
-            <a href="bonnes_pratiques_implementer.html">&lt;prev</a> | 
+            <a href="mod_github.html">&lt;prev</a> | 
 
             <a href="#bottom">bottom</a>
 
-          | <a href="valider_res.html">next&gt;</a>
+          | <a href="impl_bonnes_pratiques.html">next&gt;</a>
 
           </span>
 
@@ -205,7 +205,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </style>
 <div class="col-12">
   <!--ReleaseHeader--><p id="publish-box">Documentation des guides d'implémentation de l'ANS - version de développement local (v0.1.9) construite par les outils de publication FHIR (HL7® FHIR® Standard). Voir le <a href='https://interop.esante.gouv.fr/ig/documentation/history.html'>répertoire des versions publiées</a></p><!--EndReleaseHeader-->
-  <h2>Déployer une instance HAPI</h2>
+  <h2>Quick start FHIR</h2>
   
 
 
@@ -223,37 +223,63 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <div>
 <!-- do not remove - needed to prevent Jekyll from adding a p tag to any non block level element in the markdown.-->
 </div>
-<ol>
-  <li>Installer docker</li>
-</ol>
+<p>Nos guides d’implémentation se basent sur la norme HL7 FHIR. Ils utilisent la terminologie, les notations et les principes de conception propres à FHIR. Avant de lire le guide d’implémentation, il est important de se familiariser avec certains des principes de base de FHIR ainsi qu’avec des conseils généraux sur la façon de lire les spécifications FHIR. Les lecteurs qui ne connaissent pas FHIR sont encouragés à lire (ou au moins à survoler) ce qui suit avant d’explorer plus en avant nos guides d’implémentation.</p>
 
-<p>https://docs.docker.com/engine/install/</p>
+<p>Liste des implémentations open source :</p>
 
-<ol>
-  <li>Installer l’image docker HAPI</li>
-</ol>
+<ul>
+  <li>
+   <a href="https://hl7.org/fhir/R4/implsupport-module.html">Implementation Support Module</a>
+  </li>
+    <li>
+   <a href="https://confluence.hl7.org/display/FHIR/Open+Source+Implementations">Implémentations open source</a>
+  </li>
+    <li>
+   <a href="https://foundry.hl7.org">FHIR Foundry</a>
+  </li>
+</ul>
 
-<p>https://hub.docker.com/r/hapiproject/hapi</p>
+<p>Documentation FHIR :</p>
 
-<p>Sur mac ou linux : <code class="language-plaintext highlighter-rouge">docker pull hapiproject/hapi</code></p>
+<ul>
+  <li>
+   <a href="http://hl7.org/fhir/R4/overview.html">Vue d'ensemble de FHIR</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/overview-dev.html">Introduction pour les développeurs</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/datatypes.html">Types de données FHIR</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/terminologies.html">Utilisation des codes</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/references.html">Références entre ressources</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/formats.html">Comment lire les définitions des ressources et des profils</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/resource.html">Ressource de base</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/http.html">Opérations RESTful</a>
+  </li>
+  <li>
+   <a href="http://hl7.org/fhir/R4/search.html">Recherche</a>
+  </li>
+ </ul>
 
-<ol>
-  <li>Lancer le docker container de hapi en appuyant sur le bouton start</li>
-</ol>
+<p>N’hésitez pas à explorer d’autres aspects de la spécification FHIR qui vous semblent pertinents ou intéressants par rapport à vos besoins.</p>
 
-<p><img width="100X" alt="image" src="https://user-images.githubusercontent.com/48218773/185607031-45268753-0fb3-4e09-9788-0739d29dea02.png" /></p>
+<h3 id="le-serveur-multi-terminologies">Le Serveur Multi Terminologies</h3>
 
-<ol>
-  <li>Chercher l’url d’accès à hapi</li>
-</ol>
+<p>Les artifacts terminologiques (Terminologies et Jeux de Valeurs) pour usage français sont accessibles par consultation du <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a> de l’ANS. Le SMT permet d’accéder à ces artifacts de différentes manières : par API FHIR, par interface graphique, par des requêtes SPARQL … Ce service est complémentaire aux guides d’implémentation en permettant d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.</p>
 
-<p><img width="100X" alt="image" src="https://user-images.githubusercontent.com/48218773/185607155-189def86-cb2a-4a3f-83b4-ca945077bfa2.png" /></p>
+<p>Ces jeux de valeurs peuvent reprendre des concepts définis dans des terminologies de deux manières : via l’ajout de concept unitaire, ou via l’ajout de règles logiques (Exemple : l’ensemble des pathologies du système nerveux de la terminologie CIM-10).</p>
 
-<ol>
-  <li>Vous pouvez accéder à votre instance d’HAPI déployée en local!</li>
-</ol>
-
-<p><img width="100X" alt="image" src="https://user-images.githubusercontent.com/48218773/185607295-45dc46e9-01c8-4090-83d8-dbd63a83ac5e.png" /></p>
+<p>Pour accéder à la liste de codes associés à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d’obtenir l’ensemble des codes par expansion. Cette opération est permise par le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
 
 
 
@@ -278,7 +304,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
             <tr>
               <td style="text-align:left">&#xA0;
 
-                <a href="bonnes_pratiques_implementer.html">&lt;prev</a>
+                <a href="mod_github.html">&lt;prev</a>
 
               </td>
               <td style="text-align:center">
@@ -286,7 +312,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
               </td>
               <td style="text-align:right">&#xA0;
 
-                <a href="valider_res.html">next&gt;</a>
+                <a href="impl_bonnes_pratiques.html">next&gt;</a>
 
               </td>
             </tr>
@@ -296,7 +322,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:27+0000">2026-01-05</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:54+0000">2026-01-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
