--- a/nr-add-examples/ig/mod_bonnes_pratiques.html
+++ b/nr-add-examples/ig/mod_bonnes_pratiques.html
@@ -42,8 +42,8 @@
 	  <script src="assets/js/prism.js"></script>
     <script src="assets/js/mermaid.js" type="text/javascript"></script>
     <script src="assets/js/mermaid-init.js" type="text/javascript"></script>
-    <style type="text/css">h2{--heading-prefix:"3.2"}
-    h3,h4,h5,h6{--heading-prefix:"3.2"}</style>
+    <style type="text/css">h2{--heading-prefix:"3.1"}
+    h3,h4,h5,h6{--heading-prefix:"3.1"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
       <div class="container">    <!-- container -->
           <!-- Placeholder for child template header declarations -->
@@ -105,16 +105,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="dev_nouvel_ig.html">Quick start IG</a>
+        <a href="mod_nouvel_ig.html">Quick start IG</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_modeler.html">Bonnes pratiques</a>
+        <a href="mod_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="erreurs.html">Les erreurs courantes</a>
+        <a href="mod_erreurs.html">Les erreurs courantes</a>
       </li>
       <li>
-        <a href="github.html">Usage de GitHub</a>
+        <a href="mod_github.html">Usage de GitHub</a>
       </li>
     </ul>
   </li>
@@ -124,16 +124,16 @@
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a href="demarrer_sur_fhir.html">Quick start FHIR</a>
+        <a href="impl_demarrer_sur_fhir.html">Quick start FHIR</a>
       </li>
       <li>
-        <a href="bonnes_pratiques_implementer.html">Bonnes pratiques</a>
+        <a href="impl_bonnes_pratiques.html">Bonnes pratiques</a>
       </li>
       <li>
-        <a href="instance_hapi.html">Déployer une instance HAPI</a>
+        <a href="impl_instance_hapi.html">Déployer une instance HAPI</a>
       </li>
       <li>
-        <a href="valider_res.html">Valider une ressource contre un profil</a>
+        <a href="impl_valider_res.html">Valider une ressource contre un profil</a>
       </li>
     </ul>
   </li>
@@ -174,15 +174,15 @@
     <div id="segment-breadcrumb" class="segment">    <!-- segment-breadcrumb -->
       <div class="container">    <!-- container -->
         <ul class="breadcrumb">
-          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><a href="doc_modeler.html"><b>Doc Modeler</b></a></li><li><b>Bonnes pratiques</b></li>
+          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><a href="mod_nouvel_ig.html"><b>Quick start IG</b></a></li><li><b>Bonnes pratiques</b></li>
 
           <span style="float:right;">
 
-            <a href="dev_nouvel_ig.html">&lt;prev</a> | 
+            <a href="mod_nouvel_ig.html">&lt;prev</a> | 
 
             <a href="#bottom">bottom</a>
 
-          | <a href="erreurs.html">next&gt;</a>
+          | <a href="mod_erreurs.html">next&gt;</a>
 
           </span>
 
@@ -874,7 +874,7 @@ Usage: #definition
             <tr>
               <td style="text-align:left">&nbsp;
 
-                <a href="dev_nouvel_ig.html">&lt;prev</a>
+                <a href="mod_nouvel_ig.html">&lt;prev</a>
 
               </td>
               <td style="text-align:center">
@@ -882,7 +882,7 @@ Usage: #definition
               </td>
               <td style="text-align:right">&nbsp;
 
-                <a href="erreurs.html">next&gt;</a>
+                <a href="mod_erreurs.html">next&gt;</a>
 
               </td>
             </tr>
@@ -892,7 +892,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:27+0000">2026-01-05</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:54+0000">2026-01-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
